fix detail text alignment

--- a/docview/style.css
+++ b/docview/style.css
@@ -28,6 +28,7 @@
 
 .detail {
     display: none;
+    text-align: left;
 }
 .name:hover + .detail.empty {
     display: none
